--- a/main.html
+++ b/main.html
@@ -784,8 +784,8 @@
 					<li class="block-item col-2 col-xxl-2"> <a href="#">Ультразвуковое лечение<br> Implant Center 2</a>
 					</li>
 					<li class="block-item col-2 col-xxl-2"> <a href="#">Компьютерная томография <br> Vatech</a> </li>
-					<li class="block-item col-2 col-xxl-2"> <a href="#">Аппарат <br> Cerec</a> </li>
-					<li class="block-item col-2 col-xxl-2"> <a>3D <br> Принтер</a> </li>
+					<li class="block-item col-2 col-xxl-2"> <a href="#">Аппарат для фрезерования <br> Cerec</a> </li>
+					<li class="block-item col-2 col-xxl-2"> <a>3D принтер для печати <br> элайнеров и моделей</a> </li>
 				</ul>
 				<div class="line"></div>
 			</div>
@@ -867,7 +867,7 @@
 		<div class="container-fluid slide-content bottom-glue">
 			<div class=" row-zero">
 				<div class="col-9 col-sm-6 col-md-4 col-lg-6">
-					<p class="h3"> 3D <br> Принтер </p>
+					<p class="h3"> 3D Принтер </p>
 				</div>
 				<div class="col-12 col-sm-6 col-md-8 col-lg-6">
 					<div class="block-slider-text">
