--- a/keramicheskie-viniry.html
+++ b/keramicheskie-viniry.html
@@ -453,9 +453,9 @@
 					</div>
 					<div class="slide-content">
 						<div class="ba-slider">
-							<div class="img img-after" style='background-image: url("00_vinir_02.jpg")' alt=""></div>
+							<div class="img img-after" style='background-image: url("00_vinir_02-2.jpg")' alt=""></div>
 							<div class="resize">
-								<div class="img img-before" style='background-image: url("00_vinir_01.jpg")' alt="">
+								<div class="img img-before" style='background-image: url("00_vinir_01-1.jpg")' alt="">
 								</div>
 							</div> <span class="handle"><span class="icon"> <span class="svg-container">
 										<span class="arrow-image-left">
