--- a/clinic.html
+++ b/clinic.html
@@ -508,7 +508,7 @@
 						</div>
 						<div class=" slide-content">
 							<div class="row-zero">
-								<p class="p col-12"> 3d принтер в медицине уже не новинка, а ответ запросу на
+								<p class="p col-12"> 3D принтер в медицине уже не новинка, а ответ запросу на
 									современное лечение. Имея принтер
 									в клинике мы делаем лечение предсказуемым и сокращаем его сроки. </p>
 								<p class="p p-li col-6"> изготавливаем навигационные шаблоны для предсказуемой и
