--- a/main.html
+++ b/main.html
@@ -871,7 +871,7 @@
 				</div>
 				<div class="col-12 col-sm-6 col-md-8 col-lg-6">
 					<div class="block-slider-text">
-						<p class="p">3d принтер в медицине уже не новинка, а ответ запросу на современное лечение. Имея
+						<p class="p">3D принтер в медицине уже не новинка, а ответ запросу на современное лечение. Имея
 							принтер в клинике
 							мы делаем лечение предсказуемым и сокращаем его сроки.
 						</p>
