--- a/index-krasnoselskay.html
+++ b/index-krasnoselskay.html
@@ -851,7 +851,7 @@
 			</div>
 		</div>
 	</footer> -->
-	<footer class="block bg-dblue kras-footer">
+	<footer class="block bg-dblue">
 		<div class="container-fluid">
 			<div class="row-zero">
 				<div class="order-4 order-sm-1 col-5 col-sm-3 col-md-3 col-lg-2 offset-sm-0 offset-1"> <a href="/"
